Fix further bugs

--- a/project_3/p3_Bao.ipynb
+++ b/project_3/p3_Bao.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "INIT_WEIGHT = keras.initializers.RandomNormal(seed=RANDOM_SEED)\n",
     "\n",
     "\n",
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +255,7 @@
     "    title: str,\n",
     "    max_steps: int,\n",
     "    rng,\n",
-    "    grid=GRID,\n",
+    "    grid,\n",
     "):\n",
     "    \"\"\"Plot a route from start to end on the grid world.\n",
     "\n",
@@ -343,9 +341,9 @@
     "    end: Tuple[int, int],\n",
     "    max_steps: int,\n",
     "    max_episodes: int,\n",
+    "    grid,\n",
+    "    V,\n",
     "    optimal_steps: int = OPTIMAL_STEPS,\n",
-    "    grid=GRID,\n",
-    "    V=V,\n",
     "):\n",
     "    \"\"\"One-stop shop to plot all performance metrics during training.\n",
     "\n",
@@ -360,9 +358,9 @@
     "    :param end: The end state in the format of (row_idx, col_idx)\n",
     "    :param max_steps: Maximum number of steps per episode.\n",
     "    :param max_episodes: Maximum number of episodes.\n",
-    "    :param optimal_steps: The optimal number of steps to reach the target.\n",
     "    :param grid: The grid world. Default to GRID.\n",
     "    :param V: The final estimated state values.\n",
+    "    :param optimal_steps: The optimal number of steps to reach the target.\n",
     "    \"\"\"\n",
     "    rng=np.random.default_rng()\n",
     "    plt.rc('grid', linestyle=\"-\", color='black')\n",
@@ -398,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,6 +543,7 @@
     "    actor,\n",
     "    critic,\n",
     "    grid,\n",
+    "    V,\n",
     "    start: Tuple[int, int],\n",
     "    end: Tuple[int, int],\n",
     "    include_all: bool = True,\n",
@@ -566,6 +565,7 @@
     "    :param actor: The policy function NN simulation.\n",
     "    :param critic: The state value function NN simulation.\n",
     "    :param grid: The grid world.\n",
+    "    :param V: The tabular state values. For use in the plot only.\n",
     "    :param start: The grid coordinates of the starting position.\n",
     "    :param end: The grid coordinates of the end position.\n",
     "    :param include_all: A boolean flag to determine whether all episodes, successful or failed,\n",
@@ -648,7 +648,8 @@
     "                    end,\n",
     "                    max_steps,\n",
     "                    max_episodes,\n",
-    "                    grid=grid,\n",
+    "                    grid,\n",
+    "                    V,\n",
     "                )\n",
     "        total_ep += 1\n",
     "    print(f'Total episodes: {total_ep}')"
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,6 +675,7 @@
     "    policy_model_1,\n",
     "    state_value_model_1,\n",
     "    GRID,\n",
+    "    V,\n",
     "    (0, 0),\n",
     "    (GRID.shape[0] - 1, GRID.shape[1] - 1),\n",
     ")\n",
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,6 +714,7 @@
     "    policy_model_3,\n",
     "    state_value_model_3,\n",
     "    GRID,\n",
+    "    V,\n",
     "    (0, 0),\n",
     "    (GRID.shape[0] - 1, GRID.shape[1] - 1),\n",
     ")\n",
@@ -732,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,6 +749,7 @@
     "    policy_model_4,\n",
     "    state_value_model_4,\n",
     "    GRID,\n",
+    "    V,\n",
     "    (GRID.shape[0] - 1, GRID.shape[1] - 1),\n",
     "    (0, 0),\n",
     ")\n",
