Update p2_Bao.ipynb to fix error
Fix error reported in https://github.com/FanchenBao/reinforcement_learning/issues/2

--- a/project_2/p2_Bao.ipynb
+++ b/project_2/p2_Bao.ipynb
@@ -157,7 +157,7 @@
     "            pot_actions = []\n",
     "            for idx, (di, dj) in enumerate(ACTIONS):\n",
     "                ni, nj = i + di, j + dj\n",
-    "                if 0 <= ni < num_rows and 0 <= nj <  and grid[ni, nj] == 0:\n",
+    "                if 0 <= ni < num_rows and 0 <= nj < num_cols and grid[ni, nj] == 0:\n",
     "                    pot_actions.append(idx)\n",
     "            if pot_actions:\n",
     "                pi[i, j] = rng.choice(pot_actions)\n",
